--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -184,7 +184,15 @@ __________.__________
   * The UEF engineering resource buildings can now build up to T3 storage of their respective type.
     * Notably this means they can now build the BrewLAN T2 storages and the BlOps T3 storage.
   * Finished the first overhaul of the Megalith egg backend. (I have a second planned.)
-  * Added the Slink, Hedgehog, and House to the Megalith build lists.                       
+  * Added the Slink, Hedgehog, and House to the Megalith build lists.
+  * Altered file heirachy.
+  * Antimass: Changed the icon.
+  __________
+  2016-08-22
+  
+  * Ivan now gets a 40% dscount on units.
+  * Units build by Ivan have 40% less health than usual.
+  * Fixed an issue with the Ivan related to clearing orders after firing its last unit with scripted repeat orders.                               
 __________.__________
 2015-09-05|0.7
 
