--- a/mods/BrewLAN/documentation/Changelog.txt
+++ b/mods/BrewLAN/documentation/Changelog.txt
@@ -210,15 +210,20 @@ __________.__________
   2016-09-03
 
   * Stargate new longer dialing sequence, with more efficient address calculation.
-  __________
-  2016-09-04
-
   * Added Hexatron: Cybran T3 Mobile Missile Platform.
     * Weapon not finished.
       * Sometimes it doesn't fire.
       * The explosion graphic is about 20x too big.
       * It uses the graphic of shells instead of missiles.
-      * There isn't a reload animation yet.                                                                                                
+      * There isn't a reload animation yet.
+  __________
+  2016-09-04
+
+  * Created a custom projectile for Hexatron.
+  * Reclassified the Hexatron as a Mobile Rocket Platform and changed its description to match.
+  * Gave Hexatron team colours.
+  * Gave Hexatron a reload animation.
+  * Enabled Sorian AI to build Hexatron.                                                                                                      
 __________.__________
 2015-09-05|0.7
 
